--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "heroku": "^8.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "vercel": "^39.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
