--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
     "version": 2,
     "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
+      {
+        "src": "src/index.ts",
+        "use": "@vercel/node",
+        "config": { "includeFiles": ["src/**/*"] }
+      }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "index.js" }
+      {
+        "src": "/(.*)",
+        "dest": "src/index.ts"
+      }
     ]
   }
-  
